--- a/erp-quimicos/src/main/webapp/css/modalbox/provfacturas/formaProvfacturas.css
+++ b/erp-quimicos/src/main/webapp/css/modalbox/provfacturas/formaProvfacturas.css
@@ -99,8 +99,8 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 
 
 .provfacturas_div_one{
-	width:978px;
-    height:560px;
+	width:1138px;
+    height:580px;
 	border-radius:10px;
 	background-color:#e9e9e9;
     border:3px solid #454442;
@@ -112,7 +112,7 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 .provfacturas_div_two{
 	/*font-family:tahoma;*/
 	font-size:15px;
-    width:978px;
+    width:1138px;
     height:28px;
     background-color:#454442;
 	margin-top:0;
@@ -126,7 +126,7 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 .provfacturas_div_three{
 	/*font-family:tahoma;*/
 	font-size:11px;
-    width:968px;
+    /*width:968px;*/
     height:48px;
     background-color:#e9e9e9;
     margin-top:5px;
