git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@1185 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/remisiones/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/remisiones/startup.vm
@@ -130,7 +130,7 @@
                 
                     <div id="div_two" title="" class="remisiones_div_two">
                         <div class="columns on-2">
-                            <div class="fixed column" style="width:873px; padding-left:6px;"><strong>Remisiones de Clientes</strong></div>
+                            <div class="fixed column" style="width:1013px; padding-left:6px;"><strong>Remisiones de Clientes</strong></div>
                             <div class="fixed column" style="width:20px; height:25px;">
                                 <div id="close" style="height:25px; background-image:url('../../img/modalbox/close.png'); background-color:; background-position:top; cursor:pointer; background-repeat:no-repeat;"></div>
                             </div>
@@ -154,13 +154,13 @@
 										
                                         <table border="0" style="margin:0; padding:0;">
 											<tr>
-												<td width="520"></td>
+												<td width="560"></td>
 												<td width="10"></td>
-												<td width="90"></td>
-												<td width="260"></td>
+												<td width="150"></td>
+												<td width="300"></td>
 											</tr>
 											<tr>
-												<td valign="top" width="520"  > 
+												<td valign="top" width="560"  > 
 													<table border="0" class="gral">
 														
 														<tr>
@@ -210,17 +210,17 @@
 												<td width="10"></td>
 												<!--<td width="60"></td>-->
 												
-												<td width="350" colspan="2" valign="top" style="border: solid 1px #454442;">
+												<td width="450" colspan="2" valign="top" style="border: solid 1px #454442;">
 													<table border="0">
 														<tr>
 															<td width="10"></td>
-															<td width="330">Observaciones</td>
+															<td width="400">Observaciones</td>
 															<td width="10"></td>
 														</tr>
 														<tr>
 															<td width="10"></td>
-															<td width="330">
-																<textarea name="observaciones" rows="2" cols="60" style="width:330px; resize: none;"></textarea>
+															<td width="400">
+																<textarea name="observaciones" rows="2" cols="60" style="width:400px; resize: none;"></textarea>
 															</td>
 															<td width="10"></td>
 														</tr>
@@ -349,18 +349,20 @@
 													<table >
 														<thead>
 															<tr class="registros_pagos">
-																<td class="grid" id="td_eliminar" style="background-color: rgb(180, 180, 180); border-botton: 0px none;" width="61"><div class="delete">&nbsp;#</div></td>
+																<td class="grid" id="td_eliminar" style="background-color: rgb(180, 180, 180); border-botton: 0px none;" width="60"><div class="delete">&nbsp;#</div></td>
 																<td class="grid" id="td_sku" style="background-color: rgb(180, 180, 180); border-botton: 0px none;" width="116">&nbsp;C&oacute;digo</td>
 																<td class="grid" id="td_nombre" style="background-color: rgb(180, 180, 180);"  width="202">&nbsp;Descripci&oacute;n</td>
 																<td class="grid" style="background-color: rgb(180, 180, 180);" width="90">&nbsp;Unidad</td>
 																<td class="grid" style="background-color: rgb(180, 180, 180);" width="100">&nbsp;Presentaci&oacute;n</td>
 																<td class="grid" style="background-color: rgb(180, 180, 180);" width="80">&nbsp;Cantidad</td>
 																<td class="grid" style="background-color: rgb(180, 180, 180);" width="90">&nbsp;Precio&nbsp;unitario</td>
-																<td class="grid" style="background-color: rgb(180, 180, 180);" width="100">&nbsp;Importe</td>
+																<td class="grid" style="background-color: rgb(180, 180, 180);" width="90">&nbsp;Importe</td>
+																<td class="grid" style="background-color: rgb(180, 180, 180);" width="50">&nbsp;%&nbsp;IEPS</td>
+																<td class="grid" style="background-color: rgb(180, 180, 180);" width="90">&nbsp;Monto&nbsp;IEPS</td>
 															</tr>
 														</thead>
 													</table>
-													<div style="overflow:scroll; overflow-x: hidden; overflow-y: auto;  width:870; height: 115px; border:1px solid #C1DAD7 !important;">	
+													<div style="overflow:scroll; overflow-x:hidden; overflow-y:auto; width:1020px; height:115px; border:1px solid #C1DAD7 !important;">	
 														<table class="tabla_facturas">
 															<tbody style="background-color: #FFFFFF;" valign="top" id="grid_productos">
 																
@@ -372,7 +374,7 @@
 											</tr>
 											
 											<tr>
-												<td colspan="3" width="620"  align="left" valign="top">
+												<td colspan="3" width="720"  align="left" valign="top">
 
 													<div id="div_warning_grid" style="display:none;">
 														
@@ -406,21 +408,26 @@
 													</div>
 													
 												</td>
-												<td  width="260" align="right" valign="top" style="font-weight: bold;">
+												<td  width="300" align="right" valign="top" style="font-weight: bold;">
 													<table border ="0" width="260">
 														<tr>
 															<td width="80"></td>
 															<td width="60">Subtotal</td>
 															<td width="120"><INPUT TYPE="text" name="subtotal" value="0" style="width:120px; text-align:right;" readOnly="true"></td>
 														</tr>
-														<tr>
+														<tr id="tr_ieps">
 															<td width="80"></td>
-															<td width="60">Impuesto</td>
-															<td width="120"><INPUT TYPE="text" name="impuesto" value="0" style="width:120px; text-align:right;" readOnly="true"></td>
+															<td width="60">IEPS</td>
+															<td width="120"><input type="text" name="ieps" value="0" style="width:120px; text-align:right;" readOnly="true"></td>
 														</tr>
 														<tr>
 															<td width="80"></td>
-															<td width="60">Retenido</td>
+															<td width="60">IVA</td>
+															<td width="120"><INPUT TYPE="text" name="impuesto" value="0" style="width:120px; text-align:right;" readOnly="true"></td>
+														</tr>
+														<tr id="tr_retencion">
+															<td width="80"></td>
+															<td width="60">Retenci&oacute;n</td>
 															<td width="120"><INPUT TYPE="text" name="impuesto_retenido" value="0" style="width:120px; text-align:right;" readOnly="true"></td>
 														</tr>
 														<tr>
@@ -438,10 +445,10 @@
                             </div>
 
 
-                            <div class="fixed column" style="width:886px; background:; text-align:right; padding-left:; position:absolute; margin-top:4px;">
+                            <div class="fixed column" style="width:1026px; background:; text-align:right; padding-left:; position:absolute; margin-top:4px;">
 								<table border="0">
 									<tr>
-										<td width="786"></td>
+										<td width="926"></td>
 										<td>
 											<!--<input  id="submit" style="width:77px; height:24px; background-image:url('../../img/modalbox/btn1.png'); background-repeat:no-repeat;">-->
 											<input type="image" src="../../img/modalbox/btn1.png" id="submit" style="width:77px; height:24px;"/>
