--- a/erp-quimicos/src/main/webapp/vm/comordencompra/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/comordencompra/startup.vm
@@ -293,6 +293,37 @@
                                                                 <td width="140"><input type="text" name="fecha_entrega" style="width:80px;" readOnly="true"></td>
                                                                 <td width="25"><div class="interrogacion"><img SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_fentrega"></div></td>
                                                             </tr>
+                                                            <tr>
+                                                                <td width="10" height="10"></td>
+                                                                <td width="80"></td>
+                                                                <td width="90"></td>
+                                                                <td width="25"></td>
+                                                                <td width="80" ></td>
+                                                                <td width="70"></td>
+                                                                <td ></td>
+                                                                <td width="25"></td>
+                                                                <td width="45"></td>
+                                                                <td width="45"></td>
+                                                                <td width="120"></td>
+                                                                <td width="25"></td>
+                                                                <td width="90"></td>
+                                                                <td width="140"></td>
+                                                                <td width="25"></td>
+                                                            </tr>
+                                                            <tr>
+                                                                <td width="10">&nbsp;</td>
+                                                                <td width="275" colspan="4">Anexar&nbsp;certificados&nbsp;de&nbsp;calidad&nbsp;y&nbsp;hojas&nbsp;de&nbsp;seguridad</td>
+                                                                <td width="70"><input type="checkbox" name="check_anex_cert_hojas"></td>
+                                                                <td></td>
+                                                                <td width="25"></td>
+                                                                <td width="45"></td>
+                                                                <td width="45"></td>
+                                                                <td width="120"></td>
+                                                                <td width="25"></td>
+                                                                <td width="90"></td>
+                                                                <td width="140"></td>
+                                                                <td width="25"></td>
+                                                            </tr>
                                                         </table>
                                                     </td>
                                                 </tr>
@@ -308,7 +339,7 @@
                                                                 <td width="50"><a  href="agregar_producto">(Agregar)</a></td>
                                                                 <td width="45">Nombre</td>
                                                                 <td width="300"><input type="text" name="nombre_producto" style="width:300px;"></td>
-                                                                <td width="55"><a  href="busca_sku">(Buscar)</a></td>
+                                                                <td width="55"><a href="busca_sku">(Buscar)</a></td>
                                                                 <td width="15"></td>
                                                                 <td width="60" align="right">
                                                                     <input type="button" id="descargarpdf" value="PDF" style="width:50px; font-weight: bold;">
